# dog_walk_app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  build-dependencies.txt  compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_09_22_1020-cb701963c9ba_.py
nitpick/: .file-structure.toml  .pre-commit-config.toml  .pytest.toml  .ruff-config.toml  all.toml
src/: main.py
src/api/: dependencies.py  router.py
src/api/controllers/get_orders/: controller.py  router.py
src/api/controllers/post_order/: controller.py  responses.py  router.py
src/api/exceptions/: date_time_passed.py  time_is_busy.py
src/config/: database.py  environment.py
src/database/: client.py
src/database/models/: order.py
src/serialization/: types.py
src/serialization/schemas/: dog.py  order.py
src/use_cases/: get_available_walker.py  get_orders.py  write_order.py
src/utils/: http_docs_exception.py  mode_enum.py  walker_enum.py
tests/: conftest.py
tests/integration/: conftest.py  test_get_orders.py  test_post_order.py
tests/unit/use_cases/: conftest.py  test_get_available_walker.py  test_get_orders.py  test_write_order.py
